# ASFireWire

./: .clang-format  .clang-tidy  .clang-uml  .gitignore  .pre-commit-config.yaml  AGENTS.md  ASFW.xctestplan  AUDIODRIVER.md  AVC_RECOVERY_AND_SYNC_ALGO_AND_BUGS.md  AVC_STREAM_HEALTH_AND_RECOVERY.md  BUGLIST.md  BeBoB_REFACTOR.md  CHANGES.md  CLAUDE.md  CLEAN_CODE.md  CMakeLists.txt  DEDICE_REFACTOR.md  DICE_DEBUG.md  Focus.md  ISOCH_AUDIO_ADK.md  ISOCH_AUDIO_CLEANUP_PREP.md  MOTU_828_MK3_BringUp.md  NOTICE  README.md  REFACTOR_THOUGHTS.md  TERRATEC_TOPOLOGY_RESEARCH.md  TLABEL.md  VERSION.txt  VOLUME_TODO.md  build.sh  bump.sh  capture_died.json  install-debug-asfw.sh  mcp_log_query.json  mcp_log_query_latest.json  project.yml  raw_mcp_dump_died_new.json  sign.sh  sonar-project.properties  uml-prep.py
ASFW/: Info.plist  (+27 more)
tests/: AM824EncoderTests.cpp  ATDescriptorTests.cpp  AVCCapabilitiesSerializerTests.cpp  AVCHandlerTests.cpp  AVCInfoBlockTests.cpp  AVCUnitPlugInfoCommandTests.cpp  AddressSpaceManagerTests.cpp  ApogeeBooleanControlMappingTests.cpp  ApogeeDuetVendorCmdTests.cpp  AsyncBusContractTests.cpp  AsyncCommandBuilderTests.cpp  AsyncPacketSerDesLinuxCompatTests.cpp  AsyncSubsystemAccessorTests.cpp  AsyncSubsystemContractStub.cpp  AsyncSubsystemStub.cpp  AudioDriverConfigPolicyTests.cpp  AudioEndpointRuntimeTests.cpp  AudioFunctionBlockCommandTests.cpp  AudioIOPathTests.cpp  AudioProfileRegistryTests.cpp  AudioRingBufferTests.cpp  BlockingCadenceTests.cpp  BlockingDbcTests.cpp  BroadcastChannelCSRTests.cpp  BufferRingDMATests.cpp  BusManagerElectionTests.cpp  BusManagerGapOptimizationTests.cpp  BusOptionsFieldsTests.cpp  BusResetCoordinatorDepsStubs.cpp  BusResetCoordinatorStub.cpp  BusResetCoordinatorTests.cpp  CIPHeaderBuilderTests.cpp  CMPClientTests.cpp  CMakeLists.txt  CMakeLists_full.txt  CMakeLists_minimal.txt.bak  CSRContractVerifierTests.cpp  CSRResponderContractTests.cpp  CSRResponderTests.cpp  CallbackInvocationTest.cpp  (+87 more)
tests/AudioEngineDirect/: DirectTxProbeTests.cpp  TxAudioPacketWriterTests.cpp
tests/AudioRuntime/: AudioGraphBindingTests.cpp  AudioTransportControlBlockTests.cpp  DirectAudioEngineTests.cpp
tests/async/: ARStreamProcessorTests.cpp  ATDescriptorTests.cpp  AsyncPacketSerDesLinuxCompatTests.cpp  AsyncSubsystemAccessorTests.cpp  BufferRingDMATests.cpp  CMakeLists.txt  CompletionRefactorPlanTests.cpp  CompletionStrategyTests.cpp  DMAMemoryTests.cpp  PacketSerDesTests.cpp  ResponseSenderHeaderFormatTests.cpp
tests/audio/: AM824EncoderTests.cpp  AmdtpDirectTxTests.cpp  AmdtpRateGeometryTests.cpp  AudioDriverConfigPolicyTests.cpp  AudioEndpointRuntimeTests.cpp  AudioIOPathTests.cpp  AudioProfileRegistryTests.cpp  AudioRingBufferTests.cpp  BlockingCadenceTests.cpp  BlockingDbcTests.cpp  CIPHeaderBuilderTests.cpp  CMakeLists.txt  DiceProfileTests.cpp  ExternalSyncDiscipline48kTests.cpp  ITDescriptorLayoutTests.cpp  IsochAudioTxPipelineTimelineTests.cpp  IsochDMAMemoryManagerTests.cpp  IsochReceiveContextTests.cpp  IsochRxTimingTests.cpp  IsochServiceTxPreparationTests.cpp  IsochTransmitContextTests.cpp  IsochTxDescriptorSlabTests.cpp  IsochTxDmaRingTests.cpp  NonBlockingCadenceTests.cpp  OutputCursorDisciplineTests.cpp  PacketAssemblerTests.cpp  RawPcm24In32Tests.cpp  RxDrivenTimingTests.cpp  SYTGeneratorTests.cpp  SaffireIsochLatencyTests.cpp  SimITEngineTests.cpp  SimulatedCycleTimeline.hpp  TimingCursorPolicyTests.cpp  TransferDelayTests.cpp  TransmitBoundaryTests.cpp  TxRefillCoverageTests.cpp  TxTimingModelTests.cpp
tests/common/: AddressSpaceManagerTests.cpp  CMakeLists.txt  CSRContractVerifierTests.cpp  CSRResponderContractTests.cpp  CSRResponderTests.cpp  CapabilityModeTests.cpp  ControllerStateMachineTests.cpp  DeviceProtocolFactoryTests.cpp  DiagnosticsServiceTests.cpp  FireWireIOReturnTests.cpp  LocalRequestDispatchTests.cpp  SpeedMapServiceTests.cpp
tests/core/: BusManagerElectionTests.cpp  BusManagerGapOptimizationTests.cpp  BusResetCoordinatorTests.cpp  CMakeLists.txt  CycleObserverTests.cpp  CyclePolicyCoordinatorTests.cpp  CyclePolicyExecutorTests.cpp  GapCountOptimizerTests.cpp  GapPolicyCoordinatorTests.cpp  HardwareInterfaceOrderTests.cpp  LogRingTests.cpp  PhyPacketsTests.cpp  PostResetTimingTests.cpp  PowerLinkPolicyCoordinatorTests.cpp  RolePolicyTests.cpp  RootSelectionCoordinatorTests.cpp  SelfIDCaptureTests.cpp  SelfIDSequenceTests.cpp  SelfIDStreamParserTests.cpp  SelfIDTopologyNormalizerTests.cpp  TimingUtilsTests.cpp  TopologyGapExtractionTests.cpp  TopologyMapBuilderTests.cpp
tests/devices/: AVCStartReadinessTests.cpp  ApogeeBooleanControlMappingTests.cpp  ApogeeDuetClockTransitionTests.cpp  ApogeeDuetVendorCmdTests.cpp  AudioDuplexCoordinatorTests.cpp  BeBoBProtocolTests.cpp  CMakeLists.txt  ClockRequestBrokerTests.cpp  DICEDuplexBringupControllerTests.cpp  DICERestartSessionTests.cpp  DICETcatProtocolTests.cpp  DiceDuplexRestartCoordinatorTests.cpp  DiceFocusriteSerializationTests.cpp  DiceRecoveryPolicyTests.cpp  DiceRuntimeDeviceConfigTests.cpp  DuplexOperationGateTests.cpp  DuplexRestartSessionTests.cpp  DuplexStreamProfileTests.cpp  OutputPhaseToAudioMapTests.cpp  RestartJournalTests.cpp  RestartSessionStoreTests.cpp  SaffirePhaseLoopTests.cpp  WaitForAsyncResultTests.cpp
tests/discovery/: CMakeLists.txt  ConfigROMBuilderTests.cpp  ConfigROMStoreConcurrencyTests.cpp  DiscoveryConvergenceTests.cpp  ROMReaderMockTests.cpp  ROMScanNodeStateMachineTests.cpp  ROMScannerMultiNodeFSMTests.cpp
tests/fixtures/: tx_phase_clock_invalid.json  tx_phase_glitch.json  tx_phase_lead_gate.json  tx_phase_one_cycle_slip.json  tx_phase_sparse_calls.json  tx_phase_steady48.json  tx_phase_wrap.json
tests/irm/: BroadcastChannelCSRTests.cpp  CMakeLists.txt  IRMFallbackCoordinatorTests.cpp  LocalIRMResourceCSRHandlerTests.cpp  LocalIRMResourceControllerTests.cpp
tests/mocks/: DeferredFireWireBus.hpp  DriverKitStubs.hpp  FakeFireWireBus.hpp  FakeSessionScheduler.hpp  FakeTimerScheduler.hpp  MockAsyncSubsystem.hpp  MockConfigROMStager.hpp  MockDMAMemory.hpp  MockFireWireBus.hpp  MockHardwareInterface.hpp  MockSelfIDCapture.hpp
(+1744 files in other folders)
