# CMakeLists.txt for ASFW DriverKit Project
# Primary target: macOS with Xcode/DriverKit SDK
# Secondary: Non-macOS environments for testing only

cmake_minimum_required(VERSION 3.23)

project(ASFW
    VERSION 1.0.0
    LANGUAGES CXX
    DESCRIPTION "ASFW FireWire OHCI DriverKit Driver"
)

# ==============================================================================
# Build Configuration
# ==============================================================================

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

# Generate compile_commands.json for IDE integration (clangd, etc.)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# ==============================================================================
# Platform Detection
# ==============================================================================

set(ASFW_ON_MACOS FALSE)
set(ASFW_HAS_XCODE FALSE)
set(ASFW_HAS_DRIVERKIT FALSE)

if(APPLE)
    set(ASFW_ON_MACOS TRUE)
    
    # Check for xcodebuild
    find_program(XCODEBUILD_EXECUTABLE xcodebuild)
    if(XCODEBUILD_EXECUTABLE)
        set(ASFW_HAS_XCODE TRUE)
    endif()
    
    # Try to detect DriverKit SDK
    execute_process(
        COMMAND xcrun --sdk driverkit --show-sdk-path
        OUTPUT_VARIABLE DRIVERKIT_SDK_PATH
        OUTPUT_STRIP_TRAILING_WHITESPACE
        RESULT_VARIABLE DRIVERKIT_SDK_RESULT
        ERROR_QUIET
    )
    
    if(DRIVERKIT_SDK_RESULT EQUAL 0 AND EXISTS "${DRIVERKIT_SDK_PATH}")
        set(ASFW_HAS_DRIVERKIT TRUE)
        message(STATUS "DriverKit SDK found: ${DRIVERKIT_SDK_PATH}")
    endif()
endif()

# ==============================================================================
# Build Mode Determination
# ==============================================================================

if(ASFW_ON_MACOS AND ASFW_HAS_XCODE AND ASFW_HAS_DRIVERKIT)
    set(ASFW_FULL_BUILD_MODE TRUE)
    message(STATUS "Build mode: FULL (DriverKit driver + tests)")
else()
    set(ASFW_FULL_BUILD_MODE FALSE)
    message(STATUS "Build mode: TESTS ONLY (DriverKit components unavailable)")
    
    if(NOT ASFW_ON_MACOS)
        message(STATUS "  - Running on non-macOS platform (tests only)")
    elseif(NOT ASFW_HAS_XCODE)
        message(WARNING "  - Xcode not found (install Xcode for full build)")
    elseif(NOT ASFW_HAS_DRIVERKIT)
        message(WARNING "  - DriverKit SDK not found (install DriverKit SDK for full build)")
    endif()
endif()

# ==============================================================================
# Compiler Flags
# ==============================================================================

if(ASFW_FULL_BUILD_MODE)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} \
        -fstrict-aliasing \
        -fno-color-diagnostics"
    )
endif()

# Warning flags - suppress most warnings, keep critical errors only
add_compile_options(
    -w  # Suppress all warnings
    -Werror=return-type
    -Werror=switch
    -Werror=uninitialized
)

# ==============================================================================
# Source Files Collection
# ==============================================================================

if(ASFW_FULL_BUILD_MODE)
    # Collect all C++ source files from ASFWDriver
    file(GLOB_RECURSE ASFWDRIVER_SOURCES
        "${CMAKE_CURRENT_SOURCE_DIR}/ASFWDriver/*.cpp"
    )
    
    # Exclude IIG-generated files and test files
    list(FILTER ASFWDRIVER_SOURCES EXCLUDE REGEX ".*\\.iig\\.cpp$")
    list(FILTER ASFWDRIVER_SOURCES EXCLUDE REGEX ".*/Tests?/.*")
    list(FILTER ASFWDRIVER_SOURCES EXCLUDE REGEX ".*/ConfigROMBuilderUsageTest\\.cpp$")
    
    # Exclude main driver entry points that require IIG-generated headers
    # These files depend on headers generated by Xcode's IIG preprocessor
    list(FILTER ASFWDRIVER_SOURCES EXCLUDE REGEX ".*/ASFWDriver\\.cpp$")
    list(FILTER ASFWDRIVER_SOURCES EXCLUDE REGEX ".*/ASFWDriverUserClient\\.cpp$")
    
    # IIG source files (for documentation/reference)
    set(IIG_SOURCE_FILES
        "${CMAKE_CURRENT_SOURCE_DIR}/ASFWDriver/ASFWDriver.iig"
        "${CMAKE_CURRENT_SOURCE_DIR}/ASFWDriver/ASFWDriverUserClient.iig"
    )
    
    list(LENGTH ASFWDRIVER_SOURCES ASFWDRIVER_SOURCE_COUNT)
    message(STATUS "Found ${ASFWDRIVER_SOURCE_COUNT} C++ source files in ASFWDriver")
endif()

# ==============================================================================
# ASFWDriver Library Target (Full Build Mode Only)
# ==============================================================================

if(ASFW_FULL_BUILD_MODE)
    add_library(ASFWDriver STATIC ${ASFWDRIVER_SOURCES})
    
    # Framework paths for IDE navigation
    set(DRIVERKIT_FRAMEWORK_PATH "${DRIVERKIT_SDK_PATH}/System/DriverKit/System/Library/Frameworks")
    set(DRIVERKIT_HEADERS "${DRIVERKIT_FRAMEWORK_PATH}/DriverKit.framework/Headers")
    set(PCI_DRIVERKIT_HEADERS "${DRIVERKIT_FRAMEWORK_PATH}/PCIDriverKit.framework/Headers")
    
    # Configure DriverKit SDK as sysroot for system headers
    target_compile_options(ASFWDriver PRIVATE
        -isysroot "${DRIVERKIT_SDK_PATH}"
        -iframework "${DRIVERKIT_FRAMEWORK_PATH}"
    )
    
    # Include directories
    target_include_directories(ASFWDriver
        PUBLIC
            ${CMAKE_CURRENT_SOURCE_DIR}
            ${CMAKE_CURRENT_SOURCE_DIR}/ASFWDriver
            ${CMAKE_CURRENT_SOURCE_DIR}/../AppleHeaders
        PRIVATE
            ${CMAKE_CURRENT_SOURCE_DIR}/ASFWDriver/Core
            ${CMAKE_CURRENT_SOURCE_DIR}/ASFWDriver/Async
            ${CMAKE_CURRENT_SOURCE_DIR}/ASFWDriver/Discovery
            ${CMAKE_CURRENT_SOURCE_DIR}/ASFWDriver/Logging
            ${CMAKE_CURRENT_SOURCE_DIR}/ASFWDriver/Snapshot
            ${CMAKE_CURRENT_SOURCE_DIR}/ASFWDriver/Debug
            ${CMAKE_CURRENT_SOURCE_DIR}/ASFWDriver/Base
            ${DRIVERKIT_HEADERS}
            ${PCI_DRIVERKIT_HEADERS}
    )
    
    # Preprocessor definitions
    target_compile_definitions(ASFWDriver
        PUBLIC
            DRIVERKIT_DEPLOYMENT_TARGET=25.0
        PRIVATE
            $<$<CONFIG:Debug>:DEBUG=1>
    )
    
    # ==============================================================================
    # Custom Targets (macOS with Xcode only)
    # ==============================================================================
    
    # Target: Regenerate compile_commands.json via Xcode
    add_custom_target(compile_commands
        COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/build.sh --commands
        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
        COMMENT "Regenerating compile_commands.json via Xcode build"
        VERBATIM
    )
    
    # Target: Full Xcode build (app + dext)
    add_custom_target(xcode_build
        COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/build.sh
        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
        COMMENT "Building full ASFW project via Xcode (app + dext)"
        VERBATIM
    )
else()
    message(STATUS "Skipping ASFWDriver library target (DriverKit unavailable)")
    message(STATUS "Only test targets will be available")
endif()

# ==============================================================================
# Tests Subdirectory (Always Available)
# ==============================================================================

# Tests can run on any platform
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/tests/CMakeLists.txt")
    message(STATUS "Including tests subdirectory")
    add_subdirectory(tests)
else()
    message(WARNING "tests/CMakeLists.txt not found")
endif()

# ==============================================================================
# Documentation & Build Summary
# ==============================================================================

message(STATUS "")
message(STATUS "========== ASFW CMake Configuration ==========")
message(STATUS "Project: ${PROJECT_NAME} v${PROJECT_VERSION}")
message(STATUS "Build Type: ${CMAKE_BUILD_TYPE}")
message(STATUS "C++ Standard: C++${CMAKE_CXX_STANDARD}")
message(STATUS "")
message(STATUS "Platform Detection:")
message(STATUS "  macOS:      ${ASFW_ON_MACOS}")
message(STATUS "  Xcode:      ${ASFW_HAS_XCODE}")
message(STATUS "  DriverKit:  ${ASFW_HAS_DRIVERKIT}")
message(STATUS "")

if(ASFW_FULL_BUILD_MODE)
    message(STATUS "Build Mode: FULL")
    message(STATUS "  ✓ ASFWDriver library available")
    message(STATUS "  ✓ Tests available")
    message(STATUS "  ✓ Xcode integration targets available")
    message(STATUS "")
    message(STATUS "IMPORTANT NOTES:")
    message(STATUS "  - IIG files (.iig) must be pre-processed by Xcode")
    message(STATUS "  - Generated .iig.cpp files are in Xcode DerivedData")
    message(STATUS "  - This CMakeLists.txt is for development/testing")
    message(STATUS "  - Production builds MUST use Xcode to create .dext bundles")
    message(STATUS "  - Use 'make xcode_build' to invoke full Xcode build")
    message(STATUS "  - Use 'make compile_commands' to regenerate compile_commands.json")
    
    # Copy compile_commands.json to project root for IDE/analyzer tools
    add_custom_command(
        TARGET ASFWDriver POST_BUILD
        COMMAND ${CMAKE_COMMAND} -E copy_if_different
            "${CMAKE_BINARY_DIR}/compile_commands.json"
            "${CMAKE_SOURCE_DIR}/compile_commands.json"
        COMMENT "Copying compile_commands.json to project root"
    )
else()
    message(STATUS "Build Mode: TESTS ONLY")
    message(STATUS "  ✗ ASFWDriver library unavailable")
    message(STATUS "  ✓ Tests available (logic testing only)")
    message(STATUS "")
    message(STATUS "To enable full build mode:")
    if(NOT ASFW_ON_MACOS)
        message(STATUS "  1. Build on macOS")
    endif()
    if(NOT ASFW_HAS_XCODE)
        message(STATUS "  2. Install Xcode from App Store")
    endif()
    if(NOT ASFW_HAS_DRIVERKIT)
        message(STATUS "  3. Install DriverKit SDK (included with Xcode)")
    endif()
endif()

message(STATUS "===============================================")
message(STATUS "")
